[package]
name = "gnss-qc-traits"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "GNSS Quality Control traits"
homepage = "https://github.com/rtk-rs"
repository = "https://github.com/rtk-rs/qc-traits"
keywords = ["gnss", "gps", "geodesy", "geo"]
categories = ["science", "science::geo"]
edition = "2021"

[features]
default = ["html"]

# Unlock processing features
# - Filter designer: design and apply filter ops to GNSS datasets
processing = [
    "dep:gnss-rs",
    "dep:hifitime",
]

# Unlock HTML reporting
# This is enabled by default, since HTML is our only reporting format to this day.
html = [
    "dep:maud",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[dependencies]
thiserror = "2"
maud = { version = "0.27", optional = true }
hifitime = { version = "4.0", optional = true }
gnss-rs = { version = "2.3.5", features = ["serde", "domes", "cospar"], optional = true }
